# river_gauge_interpolation

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
data/edit/: 2017-01-01_heads.dbf  2017-02-01_heads.dbf  2017-03-01_heads.dbf  2017-04-01_heads.dbf  2017-05-01_heads.dbf  2017-06-01_heads.dbf  2017-07-01_heads.dbf  2017-08-01_heads.dbf  2017-09-01_heads.dbf  2017-09-01_heads.shp  2017-10-01_heads.dbf  2017-11-01_heads.dbf  2017-12-01_heads.dbf  2017-12-01_heads.shx  edit_Neisse_WL_2017.dbf  edit_Neisse_WL_2017.shp  edit_Neisse_WL_2017.shx  edit_Neisse_WL_2017_0201.shp  interpolated_points_river.shp  interpolated_points_river_0.dbf  interpolated_points_river_0.shp  interpolated_points_river_0.shx  interpolated_points_river_0001.shx  interpolated_points_river_0101.dbf  interpolated_points_river_0301.dbf  interpolated_points_river_0501.dbf  interpolated_points_river_0501.shx  interpolated_points_river_0701.dbf  interpolated_points_river_0701.shp  interpolated_points_river_0701.shx  interpolated_points_river_1.dbf  interpolated_points_river_1.shp  interpolated_points_river_1.shx  reference_line_river.dbf  reference_line_river.shp  reference_line_river.shx  reference_line_river_0001.shp  reference_line_river_0001.shx  reference_line_river_0101.shp  reference_line_river_0101.shx  (+12 more)
data/output/: 2017-01-01_heads.dbf  2017-01-01_heads.shp  2017-01-01_heads.shx  2017-02-01_heads.dbf  2017-03-01_heads.dbf  (+10 more)
interpolate_river/: __init__.py  functions.py
notebook/: compute_heads.ipynb
notebooks/: compute_heads.ipynb
(+22 files in other folders)
